# llm-code-reviewer

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  DEPLOYMENT.md  DEVNOTES.md  LICENSE  PHASE5_COMPLETE.md  PHASE5_READY.md  PRESENTATION.md  PROJECT_PLAN.md  QUICKSTART.md  README.md  SPECKIT_PHASE5_GUIDE.md  VALIDATION_REPORT.md  example_code.cpp  large_file_test.cpp  pyproject.toml  requirements.txt  test_large_file_chunking.py
.specify/constitutions/: large-file-support.md
.specify/memory/: constitution.md
.specify/plans/: 001-pr-review-core-plan.md  002-llm-engineering-focused.md  003-simple-mvp.md  004-extensible-llm-framework.md
cli/: __init__.py  main.py
docs/: MIGRATION.md  PHASE2_FINDINGS.md  PHASE4_HYBRID.md  PROJECT_OVERVIEW.md  README.md  SPECKIT_USAGE_GUIDE.txt  phase5-review.md
examples/: demo_ast_chunking.py
experiments/: EXPERIMENT_RESULTS.md
framework/: __init__.py  chunk_analyzer.py  chunker.py  evaluation.py  experiment_runner.py  models.py  ollama_client.py  prompt_logger.py  result_merger.py  static_filter.py  statistical_analyzer.py
integrations/: __init__.py  gitlab_client.py  gitlab_post_comment.py
plugins/: cpp_plugin.py  domain_plugin.py  production_analyzer.py
synthetic-pr/: module_10.cpp  module_11.cpp  module_12.cpp  module_14.cpp  module_15.cpp  module_4.cpp  module_7.cpp  module_8.cpp
tests/: test_chunk_analyzer.py  test_chunker.py  test_integration_chunking.py  test_large_file_chunking.py  test_phase0_integration.py  test_phase1_integration.py  test_result_merger.py
validation/: VALIDATION_REPORT.md
(+121 files in other folders)
