[project]
name = "semantic-pr-reviewer"
version = "1.0.0-alpha"
description = "LLM-powered semantic code review bot for catching logic errors and intent mismatches"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Semantic PR Review Team"}
]
dependencies = [
    "ollama>=0.1.0",
    "pydantic>=2.0.0",
    "pytest>=7.4.0",
    "pytest-xdist>=3.3.0",
    "rich>=13.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-cpp>=0.20.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.5.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
]

[project.scripts]
llm-framework = "cli.main:cli"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
